# dancesport-tracker-project

./: .gitignore  LICENSE  Procfile  README.md  app.json  couples.json  dancers.json  manage.py  pyproject.toml  render.yaml  requirements.txt  test.json
comps/: admin.py  apps.py  calc_points.py  comp_mngr_heatlist.py  comp_organizer_heatlist.py  file_based_heatlist.py  filters.py  forms.py  heatlist.py  models.py  ndca_prem_heatlist.py  tasks.py  urls.py  views.py
comps/fixtures/: comp_fixture.json  comps.json
comps/heatlist/: comp_mngr_heatlist.py  comp_organizer_heatlist.py  dance_comp_heatlist.py  file_based_heatlist.py  heatlist.py  ndca_prem_feed_heatlist.py  ndca_prem_heatlist.py  o2cm_heatlist.py
comps/migrations/: 0001_initial.py  0002_comp_logo.py  0003_comp_url_data_format.py  0004_heat_heatresult.py  0005_compmngrdancer.py  0006_auto_20200418_1636.py  0007_auto_20200418_1705.py  0008_remove_heatresult_heat.py  0009_heatresult_heat.py  0010_auto_20200421_2132.py  0011_auto_20200421_2231.py  0012_unmatchedheatentry.py  0013_unmatchedheatentry_code.py  0014_heatlistdancer_formatting_needed.py  0015_comp_heatsheet_file.py  0016_comp_process_state.py  0017_auto_20200429_0329.py  0018_auto_20200429_0344.py  0019_auto_20200429_0353.py  0020_remove_comp_process_state.py  0021_comp_process_state.py  (+43 more)
dancesport_tracker/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: Celery Progress Bars in Django.docx
rankings/: admin.py  apps.py  couple_matching.py  couple_stats.py  filters.py  forms.py  models.py  rating_stats.py  tasks.py  views.py
(+153 files in other folders)
