[tool.poetry]
name = "dancesport-tracker-project"
version = "1.0.0"
description = "Dancesport Tracker captures the results of <a href=\"https://ndca.org/\">NDCA</a> ballroom dance competitions, using publicly available data"
authors = ["David Langhorne <david.b.langhorne@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "dancesport_tracker_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
gunicorn = "^20.1.0"
redis = "^4.3.4"
celery = "celery-progress"

[tool.poetry.group.dev.dependencies]
celery-progress = "^0.1.2"
django-filter = "^22.1"
requests = "^2.28.1"
Pillow = "^9.2.0"
whitenoise = "^6.2.0"
cloudinary = "^1.29.0"
dj3-cloudinary-storage = "^0.0.6"
python-dateutil = "^2.8.2"
multielo = {git = "https://github.com/djcunningham0/multielo.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
